--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": {
     "nile": "./bin/nile"
   },
-  "version": "0.0.1",
+  "version": "0.0.3",
   "engines": {
     "node": ">=0.10.0"
   },
@@ -35,7 +35,11 @@
   },
   "readmeFilename": "README.md",
   "dependencies": {
-    "colors": "0.6.2"
+    "colors": "0.6.2",
+    "express": "4.8.7",
+    "mkdirp": "0.5.0",
+    "node-kothic": "*",
+    "pg": "3.4.1"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
