--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": {
     "nile": "./bin/nile"
   },
-  "version": "0.0.3",
+  "version": "0.0.5",
   "engines": {
     "node": ">=0.10.0"
   },
@@ -39,7 +39,8 @@
     "express": "4.8.7",
     "mkdirp": "0.5.0",
     "node-kothic": "*",
-    "pg": "3.4.1"
+    "pg": "3.4.1",
+    "jade": "1.6.0"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
