--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": {
     "nile": "./bin/nile"
   },
-  "version": "0.0.5",
+  "version": "0.0.6",
   "engines": {
     "node": ">=0.10.0"
   },
@@ -40,7 +40,8 @@
     "mkdirp": "0.5.0",
     "node-kothic": "*",
     "pg": "3.4.1",
-    "jade": "1.6.0"
+    "jade": "1.6.0",
+    "glob": "*"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
