--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": {
     "nile": "./bin/nile"
   },
-  "version": "0.0.7",
+  "version": "0.0.8",
   "engines": {
     "node": ">=0.10.0"
   },
@@ -39,7 +39,7 @@
     "commander": "2.0.0",
     "express": "4.8.7",
     "mkdirp": "0.5.0",
-    "node-style": "*",
+    "nile-style": "*",
     "pg": "3.4.1",
     "jade": "1.6.0",
     "glob": "*"
