--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "4.8.7",
     "mkdirp": "0.5.0",
     "nile-style": "*",
+    "body-parser": "1.9.0",
     "pg": "3.4.1",
     "jade": "1.6.0",
     "glob": "*"
